--- a/public/index.html
+++ b/public/index.html
@@ -4,85 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Title</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <style>
-        body {
-            margin: 0;
-            background-color: #fafafa;
-            padding-bottom: 73px;
-        }
-        header{
-            background-color: white;
-            border-bottom: #ffc699 solid 1px;
-            height: 50px;
-        }
-        header>a{
-            color: #999;
-        }
-        .card{
-            background-color: white;
-            box-shadow: #ffc699 0px 0px 3px;
-            border-radius: 5px;
-            margin-bottom: 4px;
-        }
-        .navbar-brand{
-            color: #ef6900;
-        }
-        #nav {
-            border-top: 1px solid #ffc699;
-        }
-        #nav>a{
-            color: #999;
-        }
-        .user_card{
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-        .nav-tabs{
-            border-color: #ffc699;
-        }
-        .active{
-            color: #ef6900 !important;
-            border-color: #ffc699 #ffc699 #fff !important;
-        }
-        .nav-link{
-            color: #999;
-        }
-        #wishes>div{
-            margin-top: 10px;
-        }
-
-        .avatar {
-            width: 150px;
-            height: 150px;
-        }
-
-        .avatar__image {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-        
-        @media screen and (min-width: 992px) {
-          body {
-                padding-bottom: 0;
-          }
-        }
-    </style>
 </head>
 <body>
-    <div id="root">
-
-
-    </div>
-
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+    <div id="root"></div>
 </body>
 </html>
